# labelbox-generate-data

./: .gitignore  .replit  changecolor.py  export-2020-02-17T22_53_54.948Z.json  main.py  pyproject.toml  readme.md  training.txt
color_corrected/: readme.md
input/: export-2020-02-18T00_07_24.021Z.json  export-2021-01-06T19_04_17.587Z.json  readme.md
labelbox/: export-2019-11-11T09_07_31.878Z.json
output/: training.txt
